--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ li{
     margin-left: 10px;
     padding: 12px 20px;
     border: none;
-    background: url(/delete.svg) no-repeat center;
+    background: url(./delete.svg) no-repeat center;
     /* width: 50px; */
     /* height: 50px; */
     color: #fff;
@@ -150,7 +150,7 @@ li{
     margin-right: 10px;
     padding: 12px 20px;
     border: none;
-    background: url(/edit.svg) no-repeat center;
+    background: url(./edit.svg) no-repeat center;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
